--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reset Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Amrul Kayes</span> Portfolio!</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio possimus quos quis? Impedit quos amet
+                iste,
+                nemo eius labore placeat quia ea voluptatum deleniti error officia ducimus in molestiae incidunt quae a
+                maiores esse provident dolorem repudiandae numquam! Tempore, optio.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/amrulkayes/">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/kayes-outing-bg.png" alt="My photo">
+        </div>
+    </section>
 </body>
+
 </html>
