--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
             <img src="images/kayes-outing-bg.png" alt="My photo">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/Marathon-with-bg.png" alt="">
+        </div class="half-width">
+        <div>
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto perferendis sunt fuga cupiditate rerum
+                excepturi architecto numquam, nesciunt enim facere voluptas recusandae id quae sed molestias officiis
+                quo et dolores!</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/amrulkayes/">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 
 </html>
