--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Amrul Kayes</span> Portfolio!</h1>
@@ -28,7 +28,7 @@
             <img src="images/kayes-outing-bg.png" alt="My photo">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/Marathon-with-bg.png" alt="">
         </div class="half-width">
@@ -39,6 +39,23 @@
                 excepturi architecto numquam, nesciunt enim facere voluptas recusandae id quae sed molestias officiis
                 quo et dolores!</p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/amrulkayes/">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="experience">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="half-width">
+                <h1>Full Stack Doveloper</h1>
+                <h3>2022-Present | Pro Level Developer</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, minima ullam delectus praesentium
+                    voluptatum vel optio id similique perspiciatis ipsum?</p>
+            </div>
+            <div class="half-width">
+                <h1>Baby Web Developer</h1>
+                <h3>2022-2014 | Hero Learner</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam delectus iste fugiat dicta totam
+                    repellendus voluptates eum blanditiis? Quibusdam, vitae!</p>
+            </div>
         </div>
     </section>
 </body>
