--- a/index.html
+++ b/index.html
@@ -44,20 +44,23 @@
     <section class="experience">
         <h1>Experiences</h1>
         <div class="flexible-container">
-            <div class="half-width">
-                <h1>Full Stack Doveloper</h1>
-                <h3>2022-Present | Pro Level Developer</h3>
+            <div class="experience-item">
+                <h2>Full Stack Doveloper</h2>
+                <h3 class="orange-color">2022-Present | Pro Level Developer</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, minima ullam delectus praesentium
                     voluptatum vel optio id similique perspiciatis ipsum?</p>
             </div>
-            <div class="half-width">
-                <h1>Baby Web Developer</h1>
-                <h3>2022-2014 | Hero Learner</h3>
+            <div class="experience-item right">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2022-2014 | Hero Learner</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam delectus iste fugiat dicta totam
                     repellendus voluptates eum blanditiis? Quibusdam, vitae!</p>
             </div>
         </div>
     </section>
 </body>
+<footer>
+    <p>© Amrul Kayes 2022, a Programming Hero initiative.</p>
+</footer>
 
 </html>
